--- a/apps/frontend/public/i18n/en.json
+++ b/apps/frontend/public/i18n/en.json
@@ -4,6 +4,14 @@
         "MENU": {
             "ORDER_WORK": "order work",
             "MAINTENANCE": "maintenance"
+        },
+        "LOGIN": {
+            "TITLE": "Login",
+            "EMAIL": "Email",
+            "PASSWORD": "Password",
+            "SUBMIT": "Submit",
+            "FORGOT_PASSWORD": "Forgot password?",
+            "CREATE_ACCOUNT": "Create an account"
         }
     }
 }
