--- a/apps/frontend/public/i18n/es.json
+++ b/apps/frontend/public/i18n/es.json
@@ -12,6 +12,9 @@
             "SUBMIT": "Enviar",
             "FORGOT_PASSWORD": "¿Olvidaste tu contraseña?",
             "CREATE_ACCOUNT": "Crear una cuenta"
+        },
+        "LOGOUT": {
+            "TITLE": "Cerrar sesión"
         }
     }
 }
